overlays/production-monitoring/ops/bbb-endpoints.yaml
# defines the IPs of BBB that should be scraped by Prometheus
kind: Endpoints
apiVersion: v1
metadata:
  name: bbb
  namespace: monitoring
  labels:
    k8s-app: bbb-metrics
subsets:
  - addresses:
      # scalelite
      - ip: 85.215.238.43
# sc-prod-bbb-1
      - ip: 185.56.149.60
      - ip: 185.56.149.59
      - ip: 185.56.149.58
      - ip: 185.56.149.51
      - ip: 185.56.149.50
      - ip: 185.56.149.53
      - ip: 185.56.149.52
      - ip: 185.56.149.55
      - ip: 185.56.149.54
      - ip: 185.56.149.57
      - ip: 185.56.149.56
      - ip: 185.56.149.71
      - ip: 185.56.149.70
      - ip: 185.56.149.108
      - ip: 185.56.149.109
      - ip: 185.56.149.104
      - ip: 185.56.149.2
      - ip: 185.56.149.105
      - ip: 185.56.149.3
      - ip: 185.56.149.106
      - ip: 185.56.149.4
      - ip: 185.56.149.107
      - ip: 185.56.149.5
      - ip: 185.56.149.100
      - ip: 185.56.149.6
      - ip: 185.56.149.69
      - ip: 185.56.149.101
      - ip: 185.56.149.7
      - ip: 185.56.149.102
      - ip: 185.56.149.8
      - ip: 185.56.149.103
      - ip: 185.56.149.9
      - ip: 185.56.149.62
      - ip: 185.56.149.61
      - ip: 185.56.149.64
      - ip: 185.56.149.63
      - ip: 185.56.149.66
      - ip: 185.56.149.65
      - ip: 185.56.149.68
      - ip: 185.56.149.67
      - ip: 185.56.149.80
      - ip: 185.56.149.82
      - ip: 185.56.149.81
      - ip: 185.56.149.119
      - ip: 185.56.149.115
      - ip: 185.56.149.116
      - ip: 185.56.149.117
      - ip: 185.56.149.118
      - ip: 185.56.149.111
      - ip: 185.56.149.112
      - ip: 185.56.149.113
      - ip: 185.56.149.114
      - ip: 185.56.149.110
      - ip: 185.56.149.73
      - ip: 185.56.149.72
      - ip: 185.56.149.75
      - ip: 185.56.149.74
      - ip: 185.56.149.77
      - ip: 185.56.149.76
      - ip: 185.56.149.79
      - ip: 185.56.149.78
      - ip: 185.56.149.91
      - ip: 185.56.149.90
      - ip: 185.56.149.93
      - ip: 185.56.149.92
      - ip: 185.56.149.126
      - ip: 185.56.149.127
      - ip: 185.56.149.122
      - ip: 185.56.149.123
      - ip: 185.56.149.124
      - ip: 185.56.149.125
      - ip: 185.56.149.120
      - ip: 185.56.149.121
      - ip: 185.56.149.84
      - ip: 185.56.149.83
      - ip: 185.56.149.86
      - ip: 185.56.149.85
      - ip: 185.56.149.88
      - ip: 185.56.149.87
      - ip: 185.56.149.89
      - ip: 185.56.149.15
      - ip: 185.56.149.14
      - ip: 185.56.149.17
      - ip: 185.56.149.16
      - ip: 185.56.149.19
      - ip: 185.56.149.18
      - ip: 185.56.149.95
      - ip: 185.56.149.94
      - ip: 185.56.149.97
      - ip: 185.56.149.96
      - ip: 185.56.149.11
      - ip: 185.56.149.99
      - ip: 185.56.149.10
      - ip: 185.56.149.98
      - ip: 185.56.149.13
      - ip: 185.56.149.12
      - ip: 185.56.149.26
      - ip: 185.56.149.25
      - ip: 185.56.149.28
      - ip: 185.56.149.27
      - ip: 185.56.149.29
      - ip: 185.56.149.20
      - ip: 185.56.149.22
      - ip: 185.56.149.21
      - ip: 185.56.149.24
      - ip: 185.56.149.23
      - ip: 185.56.149.37
      - ip: 185.56.149.36
      - ip: 185.56.149.39
      - ip: 185.56.149.38
      - ip: 185.56.149.31
      - ip: 185.56.149.30
      - ip: 185.56.149.33
      - ip: 185.56.149.32
      - ip: 185.56.149.35
      - ip: 185.56.149.34
      - ip: 185.56.149.48
      - ip: 185.56.149.47
      - ip: 185.56.149.49
      - ip: 185.56.149.40
      - ip: 185.56.149.42
      - ip: 185.56.149.41
      - ip: 185.56.149.44
      - ip: 185.56.149.43
      - ip: 185.56.149.46
      - ip: 185.56.149.45
# sc-prod-bbb-2
      - ip: 185.56.149.218
      - ip: 185.56.149.219
      - ip: 185.56.149.214
      - ip: 185.56.149.215
      - ip: 185.56.149.216
      - ip: 185.56.149.217
      - ip: 185.56.149.177
      - ip: 185.56.149.210
      - ip: 185.56.149.178
      - ip: 185.56.149.211
      - ip: 185.56.149.179
      - ip: 185.56.149.212
      - ip: 185.56.149.213
      - ip: 185.56.149.173
      - ip: 185.56.149.174
      - ip: 185.56.149.175
      - ip: 185.56.149.176
      - ip: 185.56.149.170
      - ip: 185.56.149.171
      - ip: 185.56.149.172
      - ip: 185.56.149.229
      - ip: 185.56.149.225
      - ip: 185.56.149.226
      - ip: 185.56.149.227
      - ip: 185.56.149.228
      - ip: 185.56.149.188
      - ip: 185.56.149.221
      - ip: 185.56.149.189
      - ip: 185.56.149.222
      - ip: 185.56.149.223
      - ip: 185.56.149.224
      - ip: 185.56.149.184
      - ip: 185.56.149.185
      - ip: 185.56.149.186
      - ip: 185.56.149.187
      - ip: 185.56.149.220
      - ip: 185.56.149.180
      - ip: 185.56.149.181
      - ip: 185.56.149.182
      - ip: 185.56.149.183
      - ip: 185.56.149.236
      - ip: 185.56.149.237
      - ip: 185.56.149.238
      - ip: 185.56.149.239
      - ip: 185.56.149.199
      - ip: 185.56.149.232
      - ip: 185.56.149.233
      - ip: 185.56.149.234
      - ip: 185.56.149.235
      - ip: 185.56.149.195
      - ip: 185.56.149.196
      - ip: 185.56.149.197
      - ip: 185.56.149.230
      - ip: 185.56.149.198
      - ip: 185.56.149.231
      - ip: 185.56.149.191
      - ip: 185.56.149.192
      - ip: 185.56.149.193
      - ip: 185.56.149.194
      - ip: 185.56.149.190
      - ip: 185.56.149.128
      - ip: 185.56.149.129
      - ip: 185.56.149.243
      - ip: 185.56.149.244
      - ip: 185.56.149.245
      - ip: 185.56.149.246
      - ip: 185.56.149.240
      - ip: 185.56.149.241
      - ip: 185.56.149.242
      - ip: 185.56.149.137
      - ip: 185.56.149.138
      - ip: 185.56.149.139
      - ip: 185.56.149.133
      - ip: 185.56.149.134
      - ip: 185.56.149.135
      - ip: 185.56.149.136
      - ip: 185.56.149.130
      - ip: 185.56.149.131
      - ip: 185.56.149.132
      - ip: 185.56.149.148
      - ip: 185.56.149.149
      - ip: 185.56.149.144
      - ip: 185.56.149.145
      - ip: 185.56.149.146
      - ip: 185.56.149.147
      - ip: 185.56.149.140
      - ip: 185.56.149.141
      - ip: 185.56.149.142
      - ip: 185.56.149.143
      - ip: 185.56.149.159
      - ip: 185.56.149.155
      - ip: 185.56.149.156
      - ip: 185.56.149.157
      - ip: 185.56.149.158
      - ip: 185.56.149.151
      - ip: 185.56.149.152
      - ip: 185.56.149.153
      - ip: 185.56.149.154
      - ip: 185.56.149.150
      - ip: 185.56.149.207
      - ip: 185.56.149.208
      - ip: 185.56.149.209
      - ip: 185.56.149.203
      - ip: 185.56.149.204
      - ip: 185.56.149.205
      - ip: 185.56.149.206
      - ip: 185.56.149.166
      - ip: 185.56.149.167
      - ip: 185.56.149.200
      - ip: 185.56.149.168
      - ip: 185.56.149.201
      - ip: 185.56.149.169
      - ip: 185.56.149.202
      - ip: 185.56.149.162
      - ip: 185.56.149.163
      - ip: 185.56.149.164
      - ip: 185.56.149.165
      - ip: 185.56.149.160
      - ip: 185.56.149.161
    ports:
      - name: ne-metrics
        port: 9100
      - name: bbb-metrics
        port: 9688
