overlays/production-monitoring/ops/turn-endpoints.yaml
# defines the IPs of TURN servers that should be scraped by Prometheus
kind: Endpoints
apiVersion: v1
metadata:
  name: turn
  namespace: monitoring
  labels:
    k8s-app: turn-metrics
subsets:
  - addresses:
# sc-prod-bbb-turn-1
      - ip: 85.215.238.104
      - ip: 85.215.238.127
      - ip: 85.215.238.117
      - ip: 85.215.238.128
      - ip: 85.215.238.122
      - ip: 85.215.238.199
      - ip: 85.215.238.101
      - ip: 85.215.238.200
      - ip: 85.215.238.102
      - ip: 85.215.238.179
      - ip: 85.215.238.228
      - ip: 85.215.239.32
      - ip: 85.215.238.98
      - ip: 85.215.238.119
      - ip: 85.215.238.207
      - ip: 85.215.238.99
      - ip: 85.215.239.35
      - ip: 85.215.238.173
      - ip: 85.215.238.120
      - ip: 85.215.238.131
  # sc-prod-jitsi-turn-1
      - ip: 81.173.114.130
      - ip: 81.173.112.62
      - ip: 81.173.112.50
      - ip: 81.173.112.244
    ports:
      - name: metrics
        port: 9100
